# daytrader

./: .gitignore  README.md  pyproject.toml
.kiro/specs/day-trading-cli/: design.md  requirements.md  tasks.md
daytrader/: __init__.py
daytrader/agents/: __init__.py  analyst.py  base.py  news.py  orchestrator.py  research.py  technical.py  trader.py
daytrader/brokers/: __init__.py  angelone.py  base.py  paper.py
daytrader/cli/: __init__.py  alerts.py  analyze.py  ask.py  auth.py  data.py  discover.py  main.py  paper.py  portfolio.py  scan.py  trade.py  watchlist.py  workflow.py
daytrader/db/: __init__.py  store.py
daytrader/indicators/: __init__.py  technical.py
daytrader/models/: __init__.py  alert.py  candle.py  journal.py  order.py  position.py  trade.py
daytrader/tools/: __init__.py  broker.py  database.py  indicators.py  web.py
tests/: test_agents.py  test_analyze.py  test_brokers.py  test_data_cache.py  test_db_store.py  test_indicators.py  test_portfolio.py  test_scan.py  test_workflow.py
